<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_main"
    tools:context=".ui.auth.LoginActivity">

    <include layout="@layout/toolbar_back"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/second_toolbar"
        android:text="Login"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Font.Bold.24"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/second_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/cl_form_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username"
            style="@style/Font.Regular.14"
            android:layout_marginTop="20dp"
            android:textColor="@color/dark_grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Username"/>

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_username">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:id="@+id/et_email"
                    android:padding="@dimen/dimen_15dp"
                    android:textStyle="bold"
                    android:hint="Enter your email"
                    android:background="@color/white"
                    android:textColorHint="@color/medium_grey"
                    style="@style/Font.Bold.16"
                    android:textColor="@color/black_grey" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_email_error"
                    android:text="Email address is not valid"
                    style="@style/Font.Regular.12"
                    android:visibility="gone"
                    android:textColor="@color/bright_red"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_password"
            style="@style/Font.Regular.14"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/rl_username"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Password"/>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_password">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etl_password"
                app:endIconDrawable="@drawable/ic_eye"
                app:endIconTint="@color/medium_grey"
                app:endIconMode="custom"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_password"
                    android:gravity="center_vertical"
                    style="@style/Font.Bold.16"
                    android:inputType="textPassword"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_15dp"
                    android:textColorHint="@color/medium_grey"
                    android:textColor="@color/black_grey"
                    android:hint="Enter your password"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:id="@+id/tv_forgot_password"
            app:layout_constraintTop_toBottomOf="@id/rl_password"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dimen_10dp"
            style="@style/Font.Bold.12"
            android:textColor="@color/medium_grey"/>

        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/grey_corner_10"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            android:layout_marginTop="35dp"
            android:text="Login"
            android:textAllCaps="false"
            style="@style/Font.Bold.18"
            android:textColor="@color/medium_grey"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_footer"
        style="@style/Font.Regular.14"
        android:textColor="@color/black_grey"
        android:text="@string/terms_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>